<resources>
    <string name="app_name">eFinder</string>

    <!-- Log in and sign up -->
    <string name="email">email@example.com</string>
    <string name="password">password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="signupText">Not have an account yet? Sign up here!</string>
    <string name="eFinderLogo">eFinder\'s, the application, logo</string>
    <string name="name">Name</string>
    <string name="signup_intro">Name</string>

    <!-- Bottom Navigation Title -->
    <string name="botnav_feed">Feed</string>
    <string name="botnav_discover">Discover</string>
    <string name="botnav_make_event">Make Event</string>
    <string name="botnav_profile">Profile</string>
    <string name="botnav_notification">Notifications</string>

    <!-- Profile strings -->
    <string name="profile_name">Navn Navnesen</string>
    <string name="about">About</string>
    <string name="followers">Number of followers</string>
    <string name="age">Age</string>
    <string name="image_profile_picture">The user\'s profile picture</string>
    <string name="icon_followers">The user\'s follower number</string>
    <string name="button_follow">Sign out of account</string>
    <string name="button_signout">Sign out of account</string>

    <!-- Innstillinger -->
    <string name="settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <!-- Lage events -->
    <string name="make_event">Make an event!</string>
    <string name="hint_name">Name of event</string>
    <string name="hint_date">Pick a date</string>
    <string name="hint_time">Pick a time</string>
    <string name="hint_payment">Choose the price</string>
    <string name="hint_location">Choose location</string>
    <string name="hint_attendants">How many can join you?</string>
    <string name="hint_image">Choose an image</string>
    <string name="description">Description</string>
    <string name="hint_description">Add a description to your event!</string>
    <string name="button_place">Pick a place</string>
    <string name="button_date">Pick a date</string>
    <string name="button_time">Pick a time</string>
    <string name="button_camera">Take a picture with you camera</string>
    <string name="button_gallery">Choose an image from your gallery!</string>
    <string name="button_add">Add</string>
    <string name="button_submit">Submit</string>

    <!-- Event detaljer -->
    <string name="eventPoster">Poster image of event</string>
    <string name="iconCalendar">Calendar icon</string>
    <string name="iconClock">Clock icon</string>
    <string name="iconLocation">Location icon</string>
    <string name="iconAttendants">Group of people icon</string>
    <string name="iconPayment">Payment icon</string>
    <string name="btnGoing">Going</string>
    <string name="btnDelete"></string>
    <string name="gMaps">Google Maps Location of Event</string>

    <!-- Discovery -->
    <string name="searchHint">Name of user</string>
    <string name="searchUserButton">Search</string>

    <!-- Google maps -->
    <string name="no_location_permission">Vi trenger din tilatelse for å kunne hente din lokasjon</string>

    <!-- Dummy strings -->
    <string name="button">Button</string>
    <string name="filler">About user</string>

    <!-- Notifications -->
    <string name="channel_name">Channel1</string>
    <string name="channel_description">Channel description 12345</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
    <string name="no">no</string>

</resources>
