<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feed"
        android:icon="@drawable/ic_baseline_view_day_24px"
        android:title="@string/botnav_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_discovery"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24px"
        android:title="@string/botnav_discover"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_make_event"
        android:icon="@drawable/ic_baseline_add_24px"
        android:title="@string/botnav_make_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profil"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/botnav_profile"
        app:showAsAction="ifRoom" />
</menu>